--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
        {{ partial "portfolio/skills.html" . }}
    {{ end }}
    {{ if .Site.Params.showProjects }}
-      {{ with .Site.GetPage "section" "projects/creations" }}
+      {{ with .Site.GetPage "section" "projects/projects" }}
          {{ .Scratch.Set "sectionId" "projects" }}
          {{ partial "sectionSummary" . }}
       {{ end }}
@@ -33,4 +33,6 @@
          {{ partial "sectionSummary" . }}
       {{ end }}
    {{ end }}
+
+
 {{ end }}
