--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -18,11 +18,11 @@
               {{ partial "contact-qr" . }}
             {{ end }}
         </div>
-              <h4 class="resume-date"> I have always been intrigued by the story- and it's impact- held within numbers and data. After graduation from the Indian Institute of Technology, I worked as an analyst for Aspect Ratio. In the role, I handled business strategy development for one of the biggest  players in global pharmaceutical industry. This experience not only made me aware of the prodigal financial impact of data driven analytics, but also sparked an interest to explore various methodologies that can be applied to employ data driven business strategies in various industries.
+              <h4 class="resume-date"> I have always been intrigued by the story hidden behind numbers and data. After graduation from the Indian Institute of Technology, I worked as an analyst for Aspect Ratio. In the role, I handled business strategy development for one of the biggest players in global pharmaceutical industry. This experience not only made me aware of the enormous financial impact of data driven analytics, but also sparked an interest to master my skills in the field.
 
               <br><br>
 
-              Following my passion to build a meaningful story from data, I am currently pursuing a Masters of Science in Business Analytics at McCombs Business School, UT Austin. The diverse course structure, along with hands-on projects with global firms has exposed me to the immense opportunities that lie within data analytics.
+              Following my passion, I am currently pursuing a Masters of Science in Business Analytics at McCombs Business School, UT Austin. The diverse course structure, along with hands-on projects with global firms has exposed me to the immense opportunities that lie within data analytics.
 
                <br><br>
                
@@ -34,10 +34,10 @@
           <ul class="list-inline list-social-icons mb-0">
             {{ range .Site.Params.handles }}
                 <li class="list-inline-item">
-                  <a href="{{ .link }}" data-toggle="tooltip" title="{{ .name }}" data-offset="0 10" rel="me">
+                  <a href="{{ .link }}" data-toggle="tooltip" title="{{ .name }}" data-offset="0 10" rel="me" target="_blank">
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-circle fa-stack-2x"></i>
-                      <i class="fab {{ if .icon}}fa-{{ .icon }}{{ else }}fa-{{ lower .name }}{{ end }} fa-stack-1x fa-inverse"></i>
+                      <i class="{{ if .icon}}{{ .icon }}{{ else }}fab fa-{{ lower .name }}{{ end }} fa-stack-1x fa-inverse"></i>
                     </span>
                   </a>
                 </li>
