--- a/layouts/partials/projectsSummary.html
+++ b/layouts/partials/projectsSummary.html
@@ -2,9 +2,9 @@
 <h3 class="mb-3"><a href="{{ .Params.link }}">{{ .Title }}</a></h3>
 <div class="resume-item d-flex flex-column flex-md-row mb-3">
 
-  <div class="resume-content " style="width:200px;!important;">
+  <div class="resume-content " style="width:250px;!important;">
     {{with  .Params.image }}
-      <img src="{{ . }}" style="max-height:150px;max-width:150px;"/>
+      <img src="{{ . }}" style="max-height:180px;max-width:180px;padding-left:15px;padding-bottom:15px;padding-right:15px"/>
     {{ end }}
   </div>
   <div class="resume-date">
