resolved all updates-20200129

--- a/layouts/partials/portfolio/skills.html
+++ b/layouts/partials/portfolio/skills.html
@@ -2,6 +2,8 @@
   <div class="my-auto" id="skills-content">
     <h2 class="mb-5">Skills</h2>
     {{ range $.Site.Data.skills }}
+        <div class="subheading mb-3 skills-heading">{{ .grouping }}</div>
+
             <ul>
             {{ range .skills }}
                 {{ if isset . "name" }}
