updated contacts section

--- a/layouts/partials/portfolio/contacts.html
+++ b/layouts/partials/portfolio/contacts.html
@@ -1,10 +1,10 @@
-<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="contacts">
   <div class="my-auto" id="skills-content">
     <h2 class="mb-5">Contact</h2>
       <ul class="list-inline list-social-icons mb-0">
 
         <li class="list-inline-item">
-            <a href="mailto:sayesha.aravapalli@utexas.edu" data-toggle="tooltip" title="Gmail" data-offset="0 10" rel="" target="_blank">
+            <a href="mailto:sayesha.aravapalli@utexas.edu" data-toggle="tooltip" title="Email" data-offset="0 10" rel="" target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-envelope"></i>
               </span>
@@ -13,13 +13,30 @@
             </a>
         </li><br>
         <li class="list-inline-item">
+        <style>
+        a:link {
+          text-decoration: none;
+        }
+
+        a:visited {
+          text-decoration: none;
+        }
+
+        a:hover {
+          text-decoration: none;
+        }
+
+        a:active {
+          text-decoration: none;
+        }
+        </style>
             <a href="tel:5129051548" data-toggle="tooltip" title="Phone" data-offset="0 10" rel="me" target="_blank">
               <span class="fa-stack fa-lg">
-                <i class="fas fa-mobile"></i>
+                <i class="fa fa-phone"></i>
               </span>
+            </a>
               <a href="tel:5129051548">(512) 905-1548</a>
 
-            </a>
         </li>
       </ul>
   </div>
