--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -18,15 +18,15 @@
               {{ partial "contact-qr" . }}
             {{ end }}
         </div>
-              <h4 class="resume-date"> I have always been intrigued by the story hidden behind numbers and data. After graduation from the Indian Institute of Technology, I worked as an analyst for Aspect Ratio. In the role, I handled business strategy development for one of the biggest players in global pharmaceutical industry. This experience not only made me aware of the enormous financial impact of data driven analytics, but also sparked an interest to master my skills in the field.
+              <h4 class="resume-date"> I have always been intrigued by the story hidden behind numbers and data. After graduation from the Indian Institute of Technology, I worked as an analyst for Aspect Ratio,Merck's centre for Analytics. In the role, I handled business strategy development for one of the biggest players in global pharmaceutical industry, Merck. This experience made me aware of the enormous financial impact of data driven analytics, and sparked an interest to master my skills in the field.
 
               <br><br>
 
-              Following my passion, I am currently pursuing a Masters of Science in Business Analytics at McCombs Business School, UT Austin. The diverse course structure, along with hands-on projects with global firms has exposed me to the immense opportunities that lie within data analytics.
+              I am currently pursuing my Masters of Science in Business Analytics at McCombs Business School, UT Austin. The diverse course structure, along with focus on hands-on projects with global firms has exposed me to the immense opportunities that lie within data analytics.
 
-               <br><br>
-               
-              Exploring new places, meditation and spiritual reading are some things that are very close to me. Feel free to connect on any of the platforms linked below.
+              <br><br>
+
+              In my personal time, I like exploring new places and reading. Feel free to connect on any of the platforms linked below.
              
               </h4>
         <div>
