--- a/layouts/partials/projectsSummary.html
+++ b/layouts/partials/projectsSummary.html
@@ -1,5 +1,5 @@
 
-<h3 class="mb-3"><a href="{{ .Params.link }}">{{ .Title }}</a></h3>
+<h3 class="mb-3"><a href="{{ .Params.link }}">{{ .Params.displaytitle }}</a></h3>
 <div class="resume-item d-flex flex-column flex-md-row mb-3">
 
   <div class="resume-content " style="width:250px;!important;">
