--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -1,7 +1,9 @@
 body {
-  font-family: 'Open Sans', serif;
+  font-family: 'PT Serif', serif;
   padding-top: 54px;
   color: #868e96;
+  font-size: 1.15rem;
+  
 }
 
 @media (min-width: 992px) {
@@ -17,9 +19,9 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Saira Extra Condensed', serif;
+  font-family: 'Lato', serif;
   font-weight: 700;
-  color: #343a40;
+  color: #69706f;
 }
 
 
@@ -33,22 +35,32 @@ h1 {
 }
 
 h2 {
-  font-size: 3.5rem;
+  font-size: 2.5rem;
+  color: #728782;
+}
+
+h3 {
+  color: #7e948f;
+}
+
+h5 {
+  font-size: 1.4rem;
+  font-weight: 500;
 }
 
 .subheading {
-  text-transform: uppercase;
+  
   font-weight: 500;
-  font-family: 'Saira Extra Condensed', serif;
+  font-family: 'PT Serif', serif;
   font-size: 1.35rem;
 }
 
 .list-social-icons a {
-  color: #495057;
+  color: #868e96;
 }
 
 .list-social-icons a:hover {
-  color: #BD5D38;
+  color: #30c2a0;
 }
 
 .list-social-icons a .fa-lg {
@@ -60,7 +72,7 @@ h2 {
 }
 
 .list-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  color: #30c2a0;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -136,19 +148,19 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #2EBA99!important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #2EBA99!important;
 }
 
 a {
-  color: #BD5D38;
+  color: #30c2a0;
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: #219679;
 }
 
 img {
