--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -7,7 +7,7 @@
     <ul>
       {{ range .Data.Pages }}
           <li>
-             <a href="{{.Permalink}}">{{.Title}}</a>
+             <a href="{{.Permalink}}">{{.Params.displaytitle}}</a>
          </li>
       {{ end }}
     </ul>
