--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -160,10 +160,19 @@ a {
 }
 
 a:hover, a:focus, a:active {
+
   color: #219679;
-  text-decoration: underline;
+
 }
+a:hover {
+
+  text-decoration: underline!important;
+
+}
+
 
 img {
   max-width:80%;
 }
+
+
